fix chromotrom solver