@@ -18,7 +18,9 @@ import net.minecraft.screen.slot.Slot;
 
 import java.util.*;
 
+import static com.somefrills.Main.LOGGER;
 import static com.somefrills.Main.mc;
+
 public class ExperimentSolver {
     public static final Feature instance = new Feature("experimentSolver");
 
@@ -29,16 +31,24 @@ public class ExperimentSolver {
     @SettingDescription("Click delay")
     public static final SettingInt clickDelay = new SettingInt(300);
 
-    private static final List<Solution> chronoSolution = new ArrayList<>();
-    private static final List<Solution> ultraSolution = new ArrayList<>();
+    // --- Chronomatron state ---
+    private static final List<Slot> chronoSequence = new ArrayList<>();
+    private static int nextClickIndex = 0;
     private static boolean rememberPhase = true;
+    private static int currentRoundProgress = 0;
+
+    // --- Ultrasequencer state ---
+    private static final List<Solution> ultraSolution = new ArrayList<>();
     private static long lastClickTime = 0;
 
     private static void updatePhase(ItemStack stack) {
         Item item = stack.getItem();
+
         if (!rememberPhase && item.equals(Items.GLOWSTONE)) {
             rememberPhase = true;
+            currentRoundProgress = 0;
         }
+
         if (rememberPhase && item.equals(Items.CLOCK)) {
             rememberPhase = false;
         }
@@ -51,15 +61,6 @@ public class ExperimentSolver {
             if (title.startsWith("Ultrasequencer (")) return ExperimentType.Ultrasequencer;
         }
         return ExperimentType.None;
-    }
-
-    private static boolean isStatus(ItemStack stack) {
-        Item item = stack.getItem();
-        String name = Utils.toPlain(stack.getName());
-        return item.equals(Items.CLOCK)
-                || item.equals(Items.BOOKSHELF)
-                || (item.equals(Items.GLOWSTONE) && !name.equals("Enchanted Book"))
-                || item.equals(Items.CAULDRON);
     }
 
     private static boolean isDye(ItemStack stack) {
@@ -75,8 +76,16 @@ public class ExperimentSolver {
         return stack.getItem().toString().endsWith("terracotta");
     }
 
-    private static boolean isStainedGlass(ItemStack stack) {
-        return stack.getItem().toString().endsWith("stained_glass");
+    private static boolean isGlowstone(ItemStack stack) {
+        return stack.getItem().equals(Items.GLOWSTONE);
+    }
+
+    // Your filter
+    // 33 & 42
+    // 12 & 21
+    // Should only allow the 12 and 33
+    private static boolean isValidChronoSlot(int idx) {
+        return (11 <= idx && idx <= 19) || (30 <= idx && idx <= 38);
     }
 
     @EventHandler
@@ -88,24 +97,25 @@ public class ExperimentSolver {
 
         ExperimentType type = getExperimentType();
 
-        // Auto-solver logic for Chronomatron
-        if (chronomatron.value() && type == ExperimentType.Chronomatron && !chronoSolution.isEmpty()) {
-            Solution next = chronoSolution.getFirst();
-            // We click the first slot in the current requirement group
-            if (!next.slots.isEmpty()) {
-                Slot slotToClick = next.slots.get(0);
+        // --- Chronomatron solver ---
+        if (chronomatron.value() && type == ExperimentType.Chronomatron && !chronoSequence.isEmpty()) {
+            if (nextClickIndex < chronoSequence.size()) {
+                Slot slotToClick = chronoSequence.get(nextClickIndex);
                 Utils.clickSlot(slotToClick.id);
-                next.slots.remove(0);
-                if (next.slots.isEmpty()) chronoSolution.removeFirst();
                 lastClickTime = currentTime;
+
+                LOGGER.info("[Chronomatron] Clicked slot ID: {} | Next index: {}/{}",
+                        slotToClick.id, nextClickIndex + 1, chronoSequence.size());
+
+                nextClickIndex++;
             }
         }
 
-        // Auto-solver logic for Ultrasequencer
+        // --- Ultrasequencer solver ---
         if (ultrasequencer.value() && type == ExperimentType.Ultrasequencer && !ultraSolution.isEmpty()) {
-            Slot slotToClick = ultraSolution.get(0).slot;
+            Slot slotToClick = ultraSolution.getFirst().slot;
             Utils.clickSlot(slotToClick.id);
-            ultraSolution.remove(0);
+            ultraSolution.removeFirst();
             lastClickTime = currentTime;
         }
     }
@@ -119,32 +129,44 @@ public class ExperimentSolver {
 
         updatePhase(event.stack);
 
-        // Recording Phase for Chronomatron
-        if (chronomatron.value() && experimentType == ExperimentType.Chronomatron) {
-            if (rememberPhase) {
-                if (isTerracotta(event.stack)) {
-                    if (chronoSolution.isEmpty()) {
-                        chronoSolution.add(new Solution(new ArrayList<>()));
-                    }
-                    chronoSolution.get(chronoSolution.size() - 1).slots.add(event.slot);
-                } else if (isStainedGlass(event.stack)) {
-                    if (!chronoSolution.isEmpty() && chronoSolution.get(chronoSolution.size() - 1).slots.stream().anyMatch(slot -> slot.id == event.slotId)) {
-                        chronoSolution.add(new Solution(new ArrayList<>()));
-                    }
+        // --- Chronomatron recording ---
+        if (chronomatron.value() && experimentType == ExperimentType.Chronomatron && rememberPhase) {
+
+            if (isTerracotta(event.stack) && isValidChronoSlot(event.slot.id)) {
+
+                currentRoundProgress++;
+
+                // Only add NEW element (the +1 each round)
+                if (currentRoundProgress > chronoSequence.size()) {
+                    chronoSequence.add(event.slot);
+
+                    LOGGER.info("[Chronomatron] Added NEW slot ID: {} | Sequence length: {}",
+                            event.slot.id, chronoSequence.size());
+                } else {
+                    LOGGER.info("[Chronomatron] Ignored replay slot ID: {}", event.slot.id);
+                }
+            }
+
+            if (isGlowstone(event.stack)) {
+                if (!chronoSequence.isEmpty()) {
+                    nextClickIndex = 0;
+                    currentRoundProgress = 0;
+
+                    LOGGER.info("[Chronomatron] Round finished. Full sequence length: {}",
+                            chronoSequence.size());
                 }
             }
         }
 
-        // Recording Phase for Ultrasequencer
+        // --- Ultrasequencer recording ---
         if (ultrasequencer.value() && experimentType == ExperimentType.Ultrasequencer) {
-            if (event.stack.getItem().equals(Items.GLOWSTONE)) {
+            if (isGlowstone(event.stack)) {
                 List<Solution> tempSolution = new ArrayList<>();
                 for (Slot slot : Utils.getContainerSlots(event.handler)) {
                     if (isDye(slot.getStack())) {
                         tempSolution.add(new Solution(slot.getStack(), slot));
                     }
                 }
-                // Sort by stack count (1, 2, 3...)
                 tempSolution.sort(Comparator.comparingInt(s -> s.stack.getCount()));
                 ultraSolution.clear();
                 ultraSolution.addAll(tempSolution);
@@ -156,9 +178,14 @@ public class ExperimentSolver {
     private static void onScreen(ScreenOpenEvent event) {
         if (instance.isActive()) {
             rememberPhase = true;
-            chronoSolution.clear();
+            chronoSequence.clear();
+            nextClickIndex = 0;
+            currentRoundProgress = 0;
+
             ultraSolution.clear();
-            lastClickTime = System.currentTimeMillis(); // Prevent instant click on open
+            lastClickTime = System.currentTimeMillis();
+
+            LOGGER.info("[Chronomatron] Screen opened, sequence cleared");
         }
     }
 
@@ -169,15 +196,10 @@ public class ExperimentSolver {
     private static class Solution {
         public ItemStack stack;
         public Slot slot;
-        public List<Slot> slots;
 
         public Solution(ItemStack stack, Slot slot) {
             this.stack = stack;
             this.slot = slot;
-        }
-
-        public Solution(List<Slot> slots) {
-            this.slots = slots;
         }
     }
 }
